--- a/src/frontend/src/Footer.scss
+++ b/src/frontend/src/Footer.scss
@@ -11,7 +11,7 @@
     border-bottom: 4px solid rgb(252, 186, 25);
 
     p {
-      font-size: 14px;
+      font-size: 0.875rem;
       color: rgb(250, 249, 248);
       max-width: unset;
       margin-bottom: 0;
@@ -21,13 +21,13 @@
   .footer {
     max-width: 1124px;
     margin: auto;
-    font-size: 14px;
+    font-size: 0.875rem;
     color: rgb(70, 67, 65);
     line-height: 21px;
     padding: 16px;
 
     p {
-      font-size: 14px;
+      font-size: 0.875rem;
     }
 
     a{
@@ -65,7 +65,7 @@
         flex: 0 0 auto;
         h2 {
           text-transform: uppercase;
-          font-size: 14px;
+          font-size: 0.875rem;
           line-height: 24px;
           margin: 16px 0px;
         }
