--- a/src/frontend/src/Header.scss
+++ b/src/frontend/src/Header.scss
@@ -5,7 +5,7 @@
 	left: 0;
 	right: 0;
 	top: 0;
-	z-index: 1;
+	z-index: 2;
 	background: white;
 	padding: 0;
 	box-shadow: rgb(169, 169, 169) 0px 2px 10px 0px;
@@ -112,13 +112,6 @@
 	}
 
 	&-collapse {
-		margin-top: 15px;
-		padding: 10px 0;
-
-		@media (min-width: 992px) {
-			margin-top: 0;
-			padding: 0;
-		}
 
 		.navbar-nav {
 
@@ -149,8 +142,11 @@
 	}
 
 	.container {
-		padding-top: 0;
-		padding-bottom: 0;
+		padding: 5px 10px;
 		justify-content: flex-start;
+
+		@media (min-width: 992px) {
+			padding: 0;
+		}
 	}
 }
